[tool.poetry]
name = "animated-fiesta"
description = "my collection"
version = "0.1.0"
authors = ["foo"]

[tool.poetry.dependencies]
python = "^3.7"
antsibull-changelog = "^0.8.1"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
